--- a/index.html
+++ b/index.html
@@ -279,12 +279,19 @@
         <section class="carrusel-clientes">
           <div class="carrusel-container">
             <div class="carrusel-slidee active">
-              <img src="img/Landings/LPAuplex.svg" alt="Ganador Hackatón" />
-              <p>ISSSTEESIN</p>
+              <img
+                src="img/Proyectos/Bahk/SisBahk.svg"
+                alt="Ganador Hackatón"
+              />
+              <p>Sistema BAHK</p>
             </div>
             <div class="carrusel-slidee">
-              <img src="img/Landings/LPAuplex.svg" alt="Otro logro" />
-              <p>ISSSTEESIN</p>
+              <img src="img/Proyectos/Serhsi/SisSerhsi.svg" alt="Otro logro" />
+              <p>Sistema SERHSI</p>
+            </div>
+            <div class="carrusel-slidee">
+              <img src="img/Proyectos/Is/SisIssteesin.svg" alt="Otro logro" />
+              <p>Sistema ISSSTEESIN</p>
             </div>
           </div>
           <div class="carrusel-buttons">
@@ -296,23 +303,23 @@
           <div class="carrusel-container">
             <div class="carrusel-slidee active">
               <img src="img/Landings/LPAuplex.svg" alt="Ganador Hackatón" />
-              <p>AUPLEX</p>
+              <p>Landing Page AUPLEX</p>
             </div>
             <div class="carrusel-slidee">
               <img src="img/Landings/LPCompania.svg" alt="Otro logro" />
-              <p>La Compañía</p>
+              <p>Landing Page La Compañía</p>
             </div>
             <div class="carrusel-slidee">
               <img src="img/Landings/LPSerhsi.svg" alt="Otro logro" />
-              <p>SERHSI</p>
+              <p>Landing Page SERHSI</p>
             </div>
             <div class="carrusel-slidee">
               <img src="img/Landings/LPSpanna.svg" alt="Otro logro" />
-              <p>SPANNA</p>
+              <p>Landing Page SPANNA</p>
             </div>
             <div class="carrusel-slidee">
               <img src="img/Landings/LPYamYam.svg" alt="Otro logro" />
-              <p>YamYam</p>
+              <p>Landing Page YamYam</p>
             </div>
           </div>
           <div class="carrusel-buttons">
