--- a/index.html
+++ b/index.html
@@ -174,21 +174,28 @@
           <h3>QA Tester Automatizador</h3>
           <h4>Grupo Coppel <span>· 2023 - 2024</span></h4>
           <p>
-            Automatización de pruebas de software para interfaces web modernas.
-            Participación en el diseño e implementación de componentes con
-            <strong>HTML</strong>, <strong>CSS</strong>,
-            <strong>JavaScript</strong> y <strong>Vue.js</strong>, priorizando
-            la experiencia del usuario y la accesibilidad.
+            Me enfoqué en asegurar la calidad del
+            <strong>punto de venta físico</strong> y del
+            <strong>sistema web de devoluciones</strong> mediante la
+            automatización de <strong>pruebas funcionales</strong> y de
+            <strong>regresión</strong>, usando frameworks en
+            <strong>Java</strong>. También trabajé con
+            <strong>Postman</strong> para pruebas de <strong>API</strong>,
+            <strong>DEMQS</strong> para la gestión de pruebas.
           </p>
         </div>
 
         <div class="experiencia">
-          <h3>Practicante de Tecnologías de la Información</h3>
+          <h3>QA & DEV Internship</h3>
           <h4>AUPLEX <span>· 2021 - 2023</span></h4>
           <p>
-            Apoyo en soporte técnico, documentación de procesos internos y
-            ejecución de pruebas funcionales. Introducción práctica a redes,
-            mantenimiento de equipos y gestión básica de servidores.
+            <strong>Documentación de procesos</strong> y
+            <strong>ejecución de pruebas funcionales</strong>, así como
+            <strong>gestión básica de servidores</strong>. Además, colaboré en
+            tareas de <strong>desarrollo</strong> como la
+            <strong>corrección de errores</strong>,
+            <strong>ajustes en interfaces</strong> y
+            <strong>mejoras en funcionalidades existentes</strong>.
           </p>
         </div>
       </div>
