--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
               <img src="img/Proyectos/Serhsi/SisSerhsi.svg" alt="Otro logro" />
               <p>Sistema SERHSI</p>
             </div>
-            <div class="carrusel-slidee">
+<!--             <div class="carrusel-slidee">
               <img src="img/Proyectos/Is/SisIssteesin.svg" alt="Otro logro" />
               <p>Sistema ISSSTEESIN</p>
-            </div>
+            </div> -->
           </div>
           <div class="carrusel-buttons">
             <button class="prev">&#10094;</button>
