cambio de logos

--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
 
         <div class="experiencia">
           <h3>Desarrollador Web Fullstack</h3>
-          <h4>ISSSTEESIN <span>· 2024 - Actualidad</span></h4>
+          <div class="contenedorLogoExpProf">
+            <img class="LogoIsssteesinExpProf" src="img/LogoIsssteesin.png" alt="" />
+            <span class="tiempoExp">· 2024 - Actualidad</span>
+          </div>
           <p>
             Responsable del desarrollo de sistemas internos utilizando
             <strong>Node.js</strong> y <strong>Vue.js</strong>. Encargado de la
@@ -169,10 +172,12 @@
             interactivos.
           </p>
         </div>
-
         <div class="experiencia">
           <h3>QA Tester Automatizador</h3>
-          <h4>Grupo Coppel <span>· 2023 - 2024</span></h4>
+          <div class="contenedorLogoExpProf">
+            <img class="LogoIsssteesinExpProf" src="img/LogoCoppel.png" alt="" />
+            <span class="tiempoExp">· 2023 - 2024</span>
+          </div>
           <p>
             Me enfoqué en asegurar la calidad del
             <strong>punto de venta físico</strong> y del
@@ -187,7 +192,10 @@
 
         <div class="experiencia">
           <h3>QA & DEV Internship</h3>
-          <h4>AUPLEX <span>· 2021 - 2023</span></h4>
+          <div class="contenedorLogoExpProf">
+            <img class="LogoIsssteesinExpProf" src="img/LogoAuplex.svg" alt="" />
+            <span class="tiempoExp">· 2023 - 2024</span>
+          </div>
           <p>
             <strong>Documentación de procesos</strong> y
             <strong>ejecución de pruebas funcionales</strong>, así como
@@ -296,7 +304,7 @@
               <img src="img/Proyectos/Serhsi/SisSerhsi.svg" alt="Otro logro" />
               <p>Sistema SERHSI</p>
             </div>
-<!--             <div class="carrusel-slidee">
+            <!--             <div class="carrusel-slidee">
               <img src="img/Proyectos/Is/SisIssteesin.svg" alt="Otro logro" />
               <p>Sistema ISSSTEESIN</p>
             </div> -->
