--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="96x96" />
 
     <title>Portafolio | Carlos Loaiza</title>
   </head>
@@ -161,7 +162,11 @@
         <div class="experiencia">
           <h3>Desarrollador Web Fullstack</h3>
           <div class="contenedorLogoExpProf">
-            <img class="LogoIsssteesinExpProf" src="img/LogoIsssteesin.png" alt="" />
+            <img
+              class="LogoIsssteesinExpProf"
+              src="img/LogoIsssteesin.png"
+              alt=""
+            />
             <span class="tiempoExp">· 2024 - Actualidad</span>
           </div>
           <p>
@@ -175,7 +180,11 @@
         <div class="experiencia">
           <h3>QA Tester Automatizador</h3>
           <div class="contenedorLogoExpProf">
-            <img class="LogoIsssteesinExpProf" src="img/LogoCoppel.png" alt="" />
+            <img
+              class="LogoIsssteesinExpProf"
+              src="img/LogoCoppel.png"
+              alt=""
+            />
             <span class="tiempoExp">· 2023 - 2024</span>
           </div>
           <p>
@@ -193,8 +202,12 @@
         <div class="experiencia">
           <h3>QA & DEV Internship</h3>
           <div class="contenedorLogoExpProf">
-            <img class="LogoIsssteesinExpProf" src="img/LogoAuplex.svg" alt="" />
-            <span class="tiempoExp">· 2023 - 2024</span>
+            <img
+              class="LogoIsssteesinExpProf"
+              src="img/LogoAuplex.svg"
+              alt=""
+            />
+            <span class="tiempoExp">· 2021 - 2023</span>
           </div>
           <p>
             <strong>Documentación de procesos</strong> y
