cambios en confirmacion

--- a/index.html
+++ b/index.html
@@ -409,6 +409,10 @@
         ></textarea>
 
         <button type="submit">Enviar</button>
+        <p
+          id="mensaje-confirmacion"
+          style="display: none; color: green; margin-top: 10px"
+        ></p>
       </form>
     </section>
 
@@ -452,7 +456,7 @@
     <button id="botonSubir" title="Volver arriba">
       <i class="fa-solid fa-arrow-up"></i>
     </button>
-    <!-- <script src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="js/portafolio.js"></script>
   </body>
 </html>
