cambios en foto

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <section class="contenedorImagenPersonal">
         <img
           class="imagenPersonal"
-          src="img/imagenes/ppuno.jpg"
+          src="img/imagenes/PHOTO-2025-05-20-20-18-34.jpg"
           alt="FotoPortafolio"
           id="fotoPersonal"
         />
