--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <title>Portafolio | Carlos Loaiza</title>
   </head>
-
   <body id="inicio">
     <header>
       <section class="logo">
@@ -73,7 +72,6 @@
         <div class="barra"></div>
       </div>
     </header>
-
     <section class="contenedorInformacionYFoto">
       <section class="contenedorInformacion">
         <h1
@@ -158,7 +156,6 @@
     <section class="seccion-experiencia-especialidades">
       <div class="experiencia-col">
         <h2>Experiencia Profesional</h2>
-
         <div class="experiencia">
           <h3>Desarrollador Web Fullstack</h3>
           <div class="contenedorLogoExpProf">
@@ -198,7 +195,6 @@
             <strong>DEMQS</strong> para la gestión de pruebas.
           </p>
         </div>
-
         <div class="experiencia">
           <h3>QA & DEV Internship</h3>
           <div class="contenedorLogoExpProf">
@@ -220,7 +216,6 @@
           </p>
         </div>
       </div>
-
       <div class="especialidades-col">
         <h2>Especialidades</h2>
         <div class="especialidades-grid">
@@ -251,7 +246,6 @@
               </p>
             </div>
           </section>
-
           <section class="contenedorTarjetas">
             <div class="especialidad-card">
               <div>
@@ -292,7 +286,6 @@
         </div>
       </section>
     </section>
-
     <section class="Proyectos">
       <h2 class="TituloProyectos">PROYECTOS</h2>
       <div class="SeparadorAcercaDe"></div>
@@ -301,7 +294,6 @@
         he creado, cada proyecto contiene su propio estudio de caso.
       </p>
     </section>
-
     <section class="seccion-sistemas">
       <div class="galeria-sistemas">
         <section class="carrusel-clientes">
@@ -317,10 +309,6 @@
               <img src="img/Proyectos/Serhsi/SisSerhsi.svg" alt="Otro logro" />
               <p>Sistema SERHSI</p>
             </div>
-            <!--             <div class="carrusel-slidee">
-              <img src="img/Proyectos/Is/SisIssteesin.svg" alt="Otro logro" />
-              <p>Sistema ISSSTEESIN</p>
-            </div> -->
           </div>
           <div class="carrusel-buttons">
             <button class="prev">&#10094;</button>
@@ -355,11 +343,6 @@
             <button class="next">&#10095;</button>
           </div>
         </section>
-        <!-- <div class="sistema-item">
-          <img src="img/Logros/1.jpeg" alt="Sistema 2" />
-          <p>Dashboard de clientes Spanna</p>
-        </div> -->
-        <!-- Puedes seguir agregando -->
       </div>
     </section>
     <section class="contenedorEmpresas">
@@ -381,7 +364,7 @@
     <section class="seccion-contacto" id="contacto">
       <h2>Contáctame</h2>
       <form class="formulario-contacto" id="formulario-contacto">
-        <label for="nombre">Nombre</label>
+        <label for="nombre"><i class="fas fa-user"></i> Nombre:</label>
         <input
           type="text"
           id="nombre"
@@ -389,8 +372,9 @@
           required
           placeholder="Tu nombre"
         />
-
-        <label for="correo">Correo Electrónico</label>
+        <label for="email"
+        ><i class="fas fa-envelope"></i> Correo electrónico:</label
+      >
         <input
           type="email"
           id="correo"
@@ -398,8 +382,7 @@
           required
           placeholder="tucorreo@ejemplo.com"
         />
-
-        <label for="mensaje">Mensaje</label>
+        <label for="mensaje"><i class="fas fa-comment"></i> Mensaje:</label>
         <textarea
           id="mensaje"
           name="mensaje"
@@ -407,22 +390,15 @@
           required
           placeholder="Escribe tu mensaje..."
         ></textarea>
-
         <button type="submit">Enviar</button>
-        <!-- <p
-          id="mensaje-confirmacion"
-          style="display: none; color: green; margin-top: 10px"
-        ></p> -->
       </form>
     </section>
-
     <footer class="footer">
       <div class="footer-contenido">
         <div class="footer-nombre">
           <h3>Carlos Andrés Loaiza</h3>
           <p>Desarrollador Web | Frontend & Backend</p>
         </div>
-
         <div class="footer-redes">
           <a href="https://www.instagram.com/carlos.loaiza_/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
@@ -444,11 +420,6 @@
           </a>
         </div>
       </div>
-
-      <section>
-        <!-- <img src="/iPad.png" alt=""> -->
-      </section>
-
       <div class="footer-copy">
         <p>&copy; 2025 Carlos Andrés Loaiza. Todos los derechos reservados.</p>
       </div>
@@ -456,7 +427,6 @@
     <button id="botonSubir" title="Volver arriba">
       <i class="fa-solid fa-arrow-up"></i>
     </button>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="js/portafolio.js"></script>
   </body>
 </html>
