--- a/index.html
+++ b/index.html
@@ -304,6 +304,79 @@
       </section>
     </section>
 
+    <section class="seccion-tecnologias" id="tecnologias">
+      <h2 class="TituloSeccion">TECNOLOGÍAS</h2>
+      <div class="SeparadorAcercaDe"></div>
+      <p class="intro-tecnologias">
+        Estas son algunas de las tecnologías y herramientas con las que trabajo.
+      </p>
+      <div class="grid-tecnologias">
+        <div class="tecnologia-card">
+          <i class="fab fa-vuejs fa-3x"></i>
+          <span>Vue.js</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-node-js fa-3x"></i>
+          <span>Node.js</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-html5 fa-3x"></i>
+          <span>HTML5</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-css3-alt fa-3x"></i>
+          <span>CSS3</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-js-square fa-3x"></i>
+          <span>JavaScript</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fas fa-database fa-3x"></i>
+          <span>MySQL</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fas fa-server fa-3x"></i>
+          <span>MongoDB</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-git-alt fa-3x"></i>
+          <span>Git</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-docker fa-3x"></i>
+          <span>Docker</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-python fa-3x"></i>
+          <span>Python</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-java fa-3x"></i>
+          <span>Java</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-react fa-3x"></i>
+          <span>React</span>
+        </div>
+      </div>
+      <!--       <h2>Sistemas Operativos</h2>
+      <div class="tecnologias-grid">
+        <div class="tecnologia-card">
+          <i class="fab fa-android fa-3x"></i>
+          <span>Android</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-apple fa-3x"></i>
+          <span>iOS</span>
+        </div>
+        <div class="tecnologia-card">
+          <i class="fab fa-windows fa-3x"></i>
+          <span>Windows</span>
+        </div>
+      </div> -->
+    </section>
+
     <section class="Proyectos">
       <h2 class="TituloProyectos">PROYECTOS</h2>
       <div class="SeparadorAcercaDe"></div>
@@ -386,13 +459,208 @@
           <img id="Serhsi" src="img/Clientes/SERHSI.png" alt="" />
           <img id="Spanna" src="img/Clientes/SPANNA.svg" alt="" />
           <img id="YamYam" src="img/Clientes/YAMYAM.svg" alt="" />
+          <img id="Nola" src="img/Clientes/NOLA-LOGO.png" alt="" />
+          <img id="Hardweria" src="img/Clientes/Hardweria.png" alt="" />
         </div>
       </section>
     </section>
+
+    <section class="seccion-comentarios" id="comentarios">
+      <h1>Clientes felices, proyectos exitosos</h1>
+
+      <h2 class="intro-comentarios">
+        Esto es lo que dicen quienes han confiado en mi trabajo:
+      </h2>
+      <div class="SeparadorAcercaDe"></div>
+
+      <div class="carrusel-testimonios">
+        <div class="carrusel-track">
+          <!-- Copiamos los mismos testimonial-card varias veces para efecto infinito -->
+          <div class="testimonial-card">
+            <img
+              src="img/imagenes/FotoCaricatura.jpg"
+              alt="Foto Diana García"
+            />
+            <p class="comentario">
+              "Carlos es un profesional muy comprometido. El sistema que
+              desarrolló superó nuestras expectativas."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Diana García</strong><br />
+                CEO de Nola
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Excelente comunicación y calidad en el desarrollo. Lo recomiendo
+              totalmente."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Laura Gómez</strong><br />
+                Coordinadora BAHK
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Carlos demostró una gran capacidad técnica y creatividad. Su
+              trabajo nos permitió optimizar procesos internos y mejorar la
+              experiencia de nuestros usuarios de manera significativa."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Miguel Torres</strong><br />
+                CTO de TechSolutions
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "La colaboración con Carlos fue impecable. Entendió nuestras
+              necesidades desde el primer momento y entregó un sistema
+              funcional, intuitivo y eficiente antes de los plazos
+              establecidos."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Valeria Ruiz</strong><br />
+                Gerente de Proyectos en Innovatech
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Su enfoque metódico y atención al detalle hicieron que nuestro
+              proyecto avanzara sin contratiempos. Carlos es un profesional
+              confiable y siempre dispuesto a ofrecer soluciones."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Andrés López</strong><br />
+                Director de Operaciones en SoftCorp
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Recomiendo ampliamente a Carlos. Su combinación de conocimientos
+              técnicos y habilidades de comunicación permitió que nuestro equipo
+              alcanzara los objetivos sin dificultad."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Mariana Sánchez</strong><br />
+                Product Manager en DigitalHub
+              </div>
+            </div>
+          </div>
+          <!-- Repetimos los mismos cards para crear el loop infinito -->
+          <div class="testimonial-card">
+            <img
+              src="img/imagenes/FotoCaricatura.jpg"
+              alt="Foto Diana García"
+            />
+            <p class="comentario">
+              "Carlos es un profesional muy comprometido. El sistema que
+              desarrolló superó nuestras expectativas."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Diana García</strong><br />
+                CEO de Nola
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Excelente comunicación y calidad en el desarrollo. Lo recomiendo
+              totalmente."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Laura Gómez</strong><br />
+                Coordinadora BAHK
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Carlos demostró una gran capacidad técnica y creatividad. Su
+              trabajo nos permitió optimizar procesos internos y mejorar la
+              experiencia de nuestros usuarios de manera significativa."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Miguel Torres</strong><br />
+                CTO de TechSolutions
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "La colaboración con Carlos fue impecable. Entendió nuestras
+              necesidades desde el primer momento y entregó un sistema
+              funcional, intuitivo y eficiente antes de los plazos
+              establecidos."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Valeria Ruiz</strong><br />
+                Gerente de Proyectos en Innovatech
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Su enfoque metódico y atención al detalle hicieron que nuestro
+              proyecto avanzara sin contratiempos. Carlos es un profesional
+              confiable y siempre dispuesto a ofrecer soluciones."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Andrés López</strong><br />
+                Director de Operaciones en SoftCorp
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <img src="img/imagenes/FotoCaricatura.jpg" alt="Foto Laura Gómez" />
+            <p class="comentario">
+              "Recomiendo ampliamente a Carlos. Su combinación de conocimientos
+              técnicos y habilidades de comunicación permitió que nuestro equipo
+              alcanzara los objetivos sin dificultad."
+            </p>
+            <div class="autor">
+              <div>
+                <strong>Mariana Sánchez</strong><br />
+                Product Manager en DigitalHub
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="seccion-contacto" id="contacto">
-      <h2>Contáctame</h2>
+      <div class="SeparadorAcercaDe"></div>
+      <h1>Hablemos de tu próximo gran proyecto</h1>
+      <h2>Construyamos algo increíble juntos</h2>
       <form class="formulario-contacto" id="formulario-contacto">
-        <label class="label" for="nombre"><i class="fas fa-user"></i> Nombre:</label>
+        <label class="label" for="nombre"
+          ><i class="fas fa-user"></i> Nombre:</label
+        >
         <input
           type="text"
           id="nombre"
@@ -412,7 +680,9 @@
           placeholder="tucorreo@ejemplo.com"
         />
 
-        <label class="label" for="mensaje"><i class="fas fa-comment"></i> Mensaje:</label>
+        <label class="label" for="mensaje"
+          ><i class="fas fa-comment"></i> Mensaje:</label
+        >
         <textarea
           id="mensaje"
           name="mensaje"
@@ -421,7 +691,7 @@
           placeholder="Escribe tu mensaje..."
         ></textarea>
 
-        <button type="submit">Enviar</button>
+        <button type="submit">Hagámoslo realidad</button>
         <!-- <p
           id="mensaje-confirmacion"
           style="display: none; color: green; margin-top: 10px"
@@ -431,41 +701,53 @@
 
     <footer class="footer">
       <div class="footer-contenido">
-        <div class="footer-nombre">
+        <!-- Sección 1: Información personal -->
+        <div class="footer-seccion footer-info">
           <h3>Carlos Andrés Loaiza.</h3>
           <p>Desarrollador Web | Frontend & Backend</p>
+          <div class="footer-redes">
+            <a href="https://www.instagram.com/carlos.loaiza_/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a
+              href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
+              target="_blank"
+            >
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a href="mailto:carlos.andres.loaiza52@gmail.com">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </div>
         </div>
 
-        <div class="footer-redes">
-          <a href="https://www.instagram.com/carlos.loaiza_/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
+        <!-- Sección 2: Información startup -->
+        <div class="footer-seccion footer-startup">
+          <h4>Mi Startup:</h4>
+          <p>
+            Creando soluciones digitales innovadoras para educación y
+            productividad.
+          </p>
           <a
-            href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
+            href="https://nola-landingpage.com"
             target="_blank"
+            class="btn-landing"
+            >Quiero echar un vistazo</a
           >
-            <i class="fa-brands fa-linkedin-in"></i>
-          </a>
-          <a
-            href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
-            target="_blank"
-          >
-            <i class="fa-brands fa-whatsapp"></i>
-          </a>
-          <a href="mailto:carlos.andres.loaiza52@gmail.com">
-            <i class="fa-solid fa-envelope"></i>
-          </a>
         </div>
       </div>
-
-      <section>
-        <!-- <img src="/iPad.png" alt=""> -->
-      </section>
 
       <div class="footer-copy">
         <p>&copy; 2025 Carlos Andrés Loaiza. Todos los derechos reservados.</p>
       </div>
     </footer>
+
     <button id="botonSubir" title="Volver arriba">
       <i class="fa-solid fa-arrow-up"></i>
     </button>
