nuevos cambios, color azul

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="icon" type="image/png" href="img/favicon.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/FotosNew/Logotipo.png" />
 
-    <title>Portafolio | Carlos Loaiza</title>
+    <title>Carlos A. Loaiza | Portafolio</title>
   </head>
 
   <body id="inicio">
     <header>
       <section class="logo">
-        <div class="nombreHeader" id="nombreHeader">CL</div>
+        <div class="nombreHeader" id="nombreHeader">
+          <img
+            class="logotipoCAL"
+            src="./img/FotosNew/Logotipo.png"
+            id="logoHeader"
+            alt=""
+          />
+        </div>
         <div class="separadorMenuHeader" id="separadorScroll"></div>
         <div class="contenedorBotonesRedes" id="redesHeader">
           <a
@@ -83,17 +90,9 @@
         >
           Hola,
           <span class="typing" style="margin-left: 10px"
-            >Soy Carlos<span style="color: #dab217"> Andrés</span> Loaiza.</span
+            >Soy Carlos<span style="color: #e0e0e0"> Andrés</span> Loaiza.</span
           >
         </h1>
-        <!-- <h1 class="infoNombre">
-          Hola, Soy 
-          <span id="typed-text">
-            <span id="nombre-parte-1">Carlos </span>
-            <span id="nombre-parte-2">Andrés </span>
-            <span id="nombre-parte-3">Loaiza.</span>
-          </span>
-        </h1> -->
         <p class="parrafoInformacion">
           <span class="spanAmarillo">Desarrollador Full Stack</span> orientado a
           resultados, enfocado en diseñar, crear y mantener sistemas web
@@ -101,44 +100,52 @@
           producto y del negocio.
         </p>
         <div class="contenedorBotonesRedes">
-          <a
-            href="https://www.instagram.com/carlos.loaiza_/"
-            target="_blank"
-            class="botonRedes"
-            id="instagram"
-          >
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
-            target="_blank"
-            class="botonRedes"
-            id="linkedin"
-          >
-            <i class="fa-brands fa-linkedin-in"></i>
-          </a>
-          <a
-            href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
-            target="_blank"
-            class="botonRedes"
-          >
-            <i class="fa-brands fa-whatsapp"></i>
-          </a>
-          <a
-            href="mailto:carlos.andres.loaiza52@gmail.com"
-            target="_blank"
-            class="botonRedes"
-          >
-            <i class="fa-solid fa-envelope"></i>
-          </a>
-          <a
-            href="Documents/CV-CarlosAndresLoaiza.pdf"
-            download
-            class="botonRedes"
-            id="cv"
-          >
-            <i class="fa-solid fa-file"></i>
-          </a>
+          <div class="BotonesRedes">
+            <a
+              href="https://www.instagram.com/carlos.loaiza_/"
+              target="_blank"
+              class="botonRedes"
+              id="instagram"
+            >
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/carlos-andr%C3%A9s-loaiza-b29176211/"
+              target="_blank"
+              class="botonRedes"
+              id="linkedin"
+            >
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a
+              href="https://wa.me/6672476316?text=Hola%2C%20quiero%20más%20información"
+              target="_blank"
+              class="botonRedes"
+            >
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a
+              href="mailto:carlos.andres.loaiza52@gmail.com"
+              target="_blank"
+              class="botonRedes"
+            >
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+            <a
+              href="Documents/CV-CarlosAndresLoaiza.pdf"
+              download
+              class="botonRedes"
+              id="cv"
+            >
+              <i class="fa-solid fa-file"></i>
+            </a>
+          </div>
+
+          <div>
+<!--             <a class="contenedorMenuHijoContactame" href="#contacto"
+              >Mi propósito de vida</a
+            > -->
+          </div>
         </div>
       </section>
       <section class="contenedorImagenPersonal">
@@ -153,7 +160,7 @@
     <section style="background-color: #ffffff">
       <img
         class="lineaAmarilla"
-        src="img/imagenes/lineamarilla.svg"
+        src="img/imagenes/LineaAzul.svg"
         alt="LineaAmarilla"
         id="quien-soy"
       />
@@ -463,6 +470,7 @@
           <img id="Hardweria" src="img/Clientes/Hardweria.png" alt="" />
         </div>
       </section>
+      <h2 class="tituloEmpresas">¡Gracias!</h2>
     </section>
 
     <section class="seccion-comentarios" id="comentarios">
@@ -727,15 +735,16 @@
           </div>
         </div>
 
+        <div class="ContenedorImgFooter">
+          <img class="imgFooter" src="./img/FotosNew/Logotipo.png" alt="" />
+        </div>
+
         <!-- Sección 2: Información startup -->
         <div class="footer-seccion footer-startup">
           <h4>Mi Startup:</h4>
-          <p>
-            Creando soluciones digitales innovadoras para educación y
-            productividad.
-          </p>
+          <p>Impulsamos el futuro de las empresas con desarrollo digital.</p>
           <a
-            href="https://nola-landingpage.com"
+            href="https://ConnectAndLaunch.com"
             target="_blank"
             class="btn-landing"
             >Quiero echar un vistazo</a
