cambios en la linea movil

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </div>
 
           <div>
-<!--             <a class="contenedorMenuHijoContactame" href="#contacto"
+            <!--             <a class="contenedorMenuHijoContactame" href="#contacto"
               >Mi propósito de vida</a
             > -->
           </div>
@@ -157,7 +157,7 @@
         />
       </section>
     </section>
-    <section style="background-color: #ffffff">
+    <section style="background-color: #ffffff; width: 100%">
       <img
         class="lineaAmarilla"
         src="img/imagenes/LineaAzul.svg"
