cambios en proposito

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
           </div>
 
           <div>
-            <!--             <a class="contenedorMenuHijoContactame" href="#contacto"
+            <a class="contenedorMenuHijoContactame" 
               >Mi propósito de vida</a
-            > -->
+            >
           </div>
         </div>
       </section>
